# aitrainer

./: .firebaserc  .gitignore  .openclaude-profile.json  .pre-commit-config.yaml  .semgrepignore  .trivyignore  ADMIN_DEPLOYMENT.md  AGENTS.md  CLAUDE.md  DESCRICAO_APP.md  DESIGN.json  DESIGN.md  GCP_DEPLOYMENT_GUIDE.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCT.md  PROJECT_OVERVIEW.md  PROMPT_EXAMPLE.md  README.md  be_status.json  docker-compose.test.yml  docker-compose.yml  firebase.json  implementation_plan.md  package-lock.json  reconstructed_prompt.md  reconstructed_summary_prompt.md  render.yaml  render_frontend_env.json  task.md
.firebase/: hosting.ZnJvbnRlbmQvZGlzdA.cache
.github/: dependabot.yml
.obsidian/: workspace.json
.playwright-mcp/: page-2026-04-17T05-29-03-464Z.yml  page-2026-04-17T05-46-25-600Z.yml  page-2026-04-17T05-50-20-098Z.yml  page-2026-04-17T06-10-57-814Z.yml  page-2026-04-17T06-11-47-111Z.yml  page-2026-04-17T13-06-32-469Z.yml  page-2026-04-17T16-48-45-777Z.yml  page-2026-04-17T16-48-51-898Z.yml  page-2026-04-17T16-49-06-748Z.yml  page-2026-04-17T16-49-20-921Z.yml  (+4 more)
backend-admin/: .dockerignore  .env.example  .gcloudignore  Dockerfile  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt
backend-admin/scripts/: init_admin_users.py
backend-admin/src/: main.py
backend-admin/src/api/endpoints/: __init__.py  admin_agent_configs.py  admin_analytics.py  admin_prompts.py  admin_tokens.py  admin_users.py
backend-admin/src/core/: deps.py
backend-admin/tests/: test_admin_prompts.py  test_admin_users.py
(+1497 files in other folders)
